--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,8 +2,60 @@
 #properties文件key-value,很难表达层次，更多使用yml与xml
 # "" : 不会转移特殊字符； '': 会转移最终为普通字符串 ；数组可以使用 - 表示或者 []
 
- server:
-   port: 8889
+server:
+  port: 8889
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/study?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&useSSL=false&serverTimezone=Asia/Shanghai&allowMultiQueries=true
+    username: root
+    password:
+    type: com.alibaba.druid.pool.DruidDataSource
+    schema: classpath:import.sql
+    #springboot2.0 之后需要配置
+    #initialization-mode: always
+  thymeleaf:
+    mode: HTML
+    cache: false
+    suffix: .html
+    prefix:  classpath:/templates/
+  jackson:
+    time-zone: GMT+8
+    # 设置空如何序列化
+    default-property-inclusion: non_null
+  #Redis
+  redis:
+    database: 4
+    host: 127.0.0.1
+    port: 6379
+    timeout: 6000
+    jedis:
+      pool:
+        max-active: 1000 # 连接池最大的连接数 （使用负值表示没有限制）
+        max-wait: -1 # 连接池最大阻塞等待的时间（使用负值表示没有限制）
+        max-idle: 10 #连接池最大的空闲连接
+
+mybatis-plus:
+    # xml扫描，多个目录用逗号或者分号分隔（告诉 Mapper 所对应的 XML 文件位置）
+    mapper-locations: classpath*:mapper/*.xml
+    global-config:
+      # 以下配置均有默认值,可以不设置
+      db-config:
+        #主键类型 AUTO:"数据库ID自增" INPUT:"用户输入ID",ID_WORKER:"全局唯一ID (数字类型唯一ID)", UUID:"全局唯一ID UUID";
+        id-type: auto
+        #字段策略 IGNORED:"忽略判断"  NOT_NULL:"非 NULL 判断")  NOT_EMPTY:"非空判断"
+        field-strategy: not_empty
+        #数据库类型
+        db-type: MYSQL
+    configuration:
+      # 是否开启自动驼峰命名规则映射:从数据库列名到Java属性驼峰命名的类似映射
+      map-underscore-to-camel-case: true
+      # 返回map时true:当查询数据为空时字段返回为null,false:不加这个查询数据为空时，字段将被隐藏
+      call-setters-on-nulls: true
+      # 这个配置会将执行的sql打印出来，在开发或测试的时候可以用
+      log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+    #配置数据源
   #配置文件测试
 # parent:
 #    name: 长辈
